core: Support for device specific key handlers
Change-Id: I273c4a8e5d167b27aab234b88ad6e8c866e60738

--- a/core/res/values/symbols.xml
+++ b/core/res/values/symbols.xml
@@ -22,4 +22,8 @@
     <!-- External Aris specific core services -->
     <java-symbol type="array" name="config_externalArisServices" />
 
+    <!-- Device keyhandlers -->
+    <java-symbol type="array" name="config_deviceKeyHandlerLibs" />
+    <java-symbol type="array" name="config_deviceKeyHandlerClasses" />
+
 </resources>
