core: Initial import of lineagehw
All credits to LineageOS and related authors on:

https://github.com/LineageOS/android_lineage-sdk

Signed-off-by: Henrique Silva <jhenrique09.mcz@hotmail.com>
Change-Id: Ief90ce8c20115d6a1c17c84a9874af6246dc1dcd

--- a/core/res/values/config.xml
+++ b/core/res/values/config.xml
@@ -22,6 +22,7 @@
     <!-- Defines external services to be started by the ArisSystemServer at boot. The service itself
          should publish as a binder services in its onStart -->
     <string-array name="config_externalArisServices">
+        <item>com.aris.server.hardware.LineageHardwareService</item>
     </string-array>
 
     <!-- Paths to the libraries that contain device specific key handlers -->
