core: Import Lineage GlobalActions service
Change-Id: I4a0e5823b1ca48e235ddd4add95a6e342e754857

--- a/core/res/values/config.xml
+++ b/core/res/values/config.xml
@@ -23,6 +23,7 @@
          should publish as a binder services in its onStart -->
     <string-array name="config_externalArisServices">
         <item>com.aris.server.hardware.LineageHardwareService</item>
+        <item>com.aris.server.app.LineageGlobalActionsService</item>
     </string-array>
 
     <!-- Paths to the libraries that contain device specific key handlers -->
